2020-07-20  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR42399

	* Makefile.am (TESTSUITE_FILES): Update.

	* lib/dejagnu.exp (host_execute): Allow the executable to be
	specified with an absolute file name.
	(host_execute): Fix argument handling to allow passing more than
	one argument to the executable.  Return early if given no
	arguments at all instead of trying to execute "./".

	* testsuite/runtest.main/pr42399.exp: New file.
	* testsuite/runtest.main/nested/testsuite/bug.test/pr42399.awk:
	New file.
	* testsuite/runtest.main/nested/testsuite/bug.test/pr42399-sub.exp:
	New file.

2020-07-20  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	* Makefile.am (CLEANFILES): Update.
	(TESTSUITE_FILES): Update to reflect testsuite reorganization.

	* testsuite/lib/runtest.exp (runtest_setup_nested_testsuite): New
	procedure.
	(runtest_cleanup_nested_testsuite): New procedure.

	* testsuite/runtest.main/error.exp: Use the tool name "error" to
	select the proper subset of the nested testsuite.  Use new
	procedures for handling nested testsuite.  Use common
	nested-init.exp local init file for nested testsuite.  Let local
	init file nested-init.exp handle setting "outdir" variable.
	* testsuite/runtest.main/options.exp: Likewise; "null" tool.
	* testsuite/runtest.main/stats.exp: Likewise; "stat" tool.

	* testsuite/runtest.main/nested/: Combine nested testsuites.
	* testsuite/runtest.main/error/testsuite/error.test/error-al-dbz.exp:
	Move from here...
	* testsuite/runtest.main/nested/testsuite/error.test/error-al-dbz.exp:
	...to here.
	* testsuite/runtest.main/error/testsuite/error.test/error-dbz.exp:
	Move from here...
	* testsuite/runtest.main/nested/testsuite/error.test/error-dbz.exp:
	...to here.
	* testsuite/runtest.main/error/testsuite/error.test/error-undef.exp:
	Move from here...
	* testsuite/runtest.main/nested/testsuite/error.test/error-undef.exp:
	...to here.
	* testsuite/runtest.main/error/testsuite/error.test/simple.exp:
	Move from here...