@@ -190,6 +190,8 @@ TESTSUITE_FILES = \
 	testsuite/runtest.main/nested/testsuite/null.test/null.exp \
 	testsuite/runtest.main/stats.exp \
 	testsuite/runtest.main/nested/testsuite/stat.test/stats-sub.exp \
+	testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.awk \
+	testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.exp \
 	testsuite/runtest.main/pr42399.exp \
 	testsuite/runtest.main/nested/testsuite/bug.test/pr42399.awk \
 	testsuite/runtest.main/nested/testsuite/bug.test/pr42399-sub.exp \
